# GTest-IngSw

./: CMakeLists.txt  main.cpp
Tests/: InvierteLista.h  Lista.h  Nodo.h  Potencia.cpp  Potencia.h  Sumatoria.cpp  Sumatoria.h  test.cpp  testLista.cpp  testRecursividad.cpp
